RESOLVED FIXED304165
[GStreamer][WebRTC] Fill selected ICE candidates pair candidates only if they are known
https://bugs.webkit.org/show_bug.cgi?id=304165
Summary [GStreamer][WebRTC] Fill selected ICE candidates pair candidates only if they...
Philippe Normand
Reported 2025-12-15 01:16:42 PST
.
Attachments
Philippe Normand
Comment 1 2025-12-15 01:22:30 PST
EWS
Comment 2 2025-12-16 09:20:26 PST
Committed 304522@main (a47a9e1dcf46): <https://commits.webkit.org/304522@main> Reviewed commits have been landed. Closing PR #55395 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-12-16 09:21:12 PST
Note You need to log in before you can comment on or make changes to this bug.