[GStreamer][WebRTC] Fill selected ICE candidates pair candidates only if they are known https://bugs.webkit.org/show_bug.cgi?id=304165

Reviewed by Xabier Rodriguez-Calvar.

The selected pair isn't always fully determined so allocate the corresponding GstWebRTCICECandidate
only when it is known. This prevents critical warnings in GStreamer's webrtcstats module.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerIceTransport.cpp:
(riceCandidateToGst):
(webkitGstWebRTCIceTransportGetSelectedCandidatePair):

Canonical link: https://commits.webkit.org/304522@main